--- a/style.scss
+++ b/style.scss
@@ -57,76 +57,7 @@ html {
     z-index: -999;
 }
 
-// .navbar {
-//     position: fixed;
-//     width: 100%;
-//     padding: 20px 0;
-//     z-index: 999;
-//     font-family: 'Ubuntu', sans-serif;
-//     transition: all 0.3s ease;
-//     background-color: #BB2339;
-//     box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.161);
 
-//     .max-width {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         padding-bottom: 10px;
-
-//         .menu {
-//             margin-bottom: -10px;
-//             display: flex;
-
-//             li {
-//                 list-style: none;
-//                 display: inline-block;
-//             }
-
-//             a {
-//                 color: #fff;
-//                 text-decoration: none;
-//                 font-size: 18px;
-//                 font-weight: 500;
-//                 margin-left: 25px;
-//                 transition: color 0.3s ease;
-//                 font-family: 'Open Sans';
-//                 font-style: normal;
-//                 font-weight: 400;
-//                 font-size: 16px;
-//                 line-height: 22px;
-//                 letter-spacing: 0.04em;
-//                 color: #FFFFFF;
-//             }
-
-//             .nav__button {
-//                 border: 1px solid white;
-//                 padding: 10px 40px;
-//                 border-radius: 48px;
-//             }
-
-//         }
-
-//         .logo a {
-//             color: #fff;
-//             font-size: 35px;
-//             font-weight: 600;
-//         }
-
-//     }
-// }
-
-// .navbar .menu li a:hover {
-//     color: yellow;
-// }
-
-// .navbar.sticky .menu li a:hover {
-//     color: rgb(7, 58, 198);
-//     transition: all 0.3s ease;
-// }
-
-// .menu-btn {
-//     display: none;
-// }
 
 nav {
     background-color: #BB2339;
@@ -222,6 +153,11 @@ main {
                     background-color: transparent;
                     border-radius: 48px;
                     border: 1px solid white;
+                    transition: .5s;
+                    &:hover {
+                        background-color: white;
+                        color: #BB2339;
+                    }
                 }
             }
         }
@@ -450,7 +386,7 @@ main {
             }
 
             .hov:hover {
-                background-color: #aaaaaa;
+                background-color: #eeeeee;
             }
         }
 
@@ -545,7 +481,7 @@ main {
                 .bir {
                     border: 1px solid gray;
                     border-radius: 13px;
-                    transition: 0.5s;
+                    transition: 0.7s;
 
                     img {
                         width: 100%;
@@ -597,9 +533,9 @@ main {
                                 font-family: "Open Sans";
                                 font-style: normal;
                                 font-weight: 400;
-                                font-size: 14px;
+                                font-size: 15px;
                                 line-height: 19px;
-                                color: #242424;
+                                color: #000;
                                 opacity: 0.5;
                             }
                         }
@@ -620,7 +556,7 @@ main {
 
                         .bot {
                             .ra {
-                                color: rgb(255, 255, 255) !important;
+                                color: white !important;
                             }
                         }
                     }
@@ -644,6 +580,11 @@ main {
                 background-color: transparent;
                 color: black;
                 border-radius: 20px;
+                transition: .5s;
+                &:hover {
+                    background-color: #BB2339;
+                    color: white;
+                }
             }
         }
     }
@@ -706,6 +647,11 @@ main {
                         padding: 10px 40px;
                         border-radius: 30px;
                         border: 1px solid #BB2339;
+                        transition: .5s;
+                        &:hover {
+                            background-color: #BB2339 !important;
+                            color: white;
+                        }
                     }
                 }
             }
